@@ -1,3 +1,10 @@
+2018-12-19  Ross Kirsling  <ross.kirsling@sony.com>
+
+        Unreviewed follow-up to r192914.
+
+        * test262/expectations.yaml:
+        Add the last 20 missing expectations.
+
 2018-12-19  Keith Miller  <keith_miller@apple.com>
 
         Fix test262 expectations
